# bitwarden_to_keepass

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD  CHANGELOG.md  LICENSE  MODULE.bazel  README.md  WORKSPACE  pyproject.toml  requirements-dev.txt  requirements_lock.txt  setup.cfg  setup.py  setup_bazel.sh
.github/workflows/: ci.yml  publish.yml
src/bitwarden_to_keepass/: BUILD  __init__.py  cli.py  main.py
tests/: BUILD  conftest.py  test_main.py
tests/data/: empty_db.kdbx
tools/bazel/: BUILD  README.md  defs.bzl  pytest_shim.py
