[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bitwarden_to_keepass"
version = "1.0.0"
description = "A simple little script that backs up a Bitwarden vault to a local KeePass file."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Douglas Thor"},  # so that package core metadata "Author" field gets populated.
    {name = "Douglas Thor", email = "doug.thor@gmail.com"},
]
maintainers = []
keywords = []
classifiers = []
dependencies = [
    "click>=8.1,<9.0",
    "pykeepass>=4.0,<5.0",
]

[project.optional-dependencies]
dev = [
    "appdirs==1.4.3",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "attrs==19.3.0",
    "cffi==1.16.0",
    "cfgv==3.1.0",
    "construct==2.10.68",
    "coverage==7.3.2",
    "distlib==0.3.6",
    "exceptiongroup==1.1.3",
    "filelock==3.8.0",
    "future==0.18.3",
    "identify==2.5.6",
    "importlib-metadata==1.5.0",
    "importlib-resources==1.0.2",
    "iniconfig==2.0.0",
    "lxml==4.9.3",
    "more-itertools==8.2.0",
    "nodeenv==1.3.5",
    "packaging==20.1",
    "platformdirs==2.5.2",
    "pluggy==0.13.1",
    "pre-commit==3.4.0",
    "py==1.10.0",
    "pycparser==2.21",
    "pycryptodomex==3.19.0",
    "pykeepass==4.0.3",
    "pyparsing==2.4.6",
    "pytest==7.4.2",
    "pytest-cov==4.1.0",
    "python-dateutil==2.8.2",
    "PyYAML==6.0.1",
    "six==1.14.0",
    "toml==0.10.0",
    "virtualenv==20.16.5",
    "wcwidth==0.1.8",
    "zipp==3.0.0",
]
build = [
    "build==0.10.0",
    "setuptools==65.5.0",
    "wheel==0.37.1",
]

[project.scripts]
"bitwarden_to_keepass" = "bitwarden_to_keepass.cli:run"

[project.urls]
"Source Code" = "https://github.com/dougthor42/bitwarden_to_keepass"
"Changelog" = "https://github.com/dougthor42/bitwarden_to_keepass/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/dougthor42/bitwarden_to_keepass/issues"
