# TODO: These two [options] items should be in pyproject.toml
[options]
pacakge_dir =
    =src

[options.packages.find]
where=src

[flake8]
max-line-length = 88
ignore = W503, E203, E266
# W503: line breaks before binary operator. Not pep8-compliant
# E203: whitespace before ':'. Not pep8-compliant
# E266: Too many leading '#' before comment

[mypy]
show_error_codes = True

[tool:pytest]
# Note: We use the pytest-cov option "--cov-context test" here instead of the
# coverage option "dynamic_context = test_function" in [coverage:run] because
# then the contexts will include the full pytest name and account for
# parametrized fuctions.
# Basically the difference between this (`pytest-cov`)
#   tests/test_cli.py::TestCli::test_cli[test_args0]|run
#   tests/test_cli.py::TestCli::test_cli[test_args1]|run
#   tests/test_cli.py::TestCli::test_cli_invalid_args[invalid_args2]|run
#   tests/test_cli.py::TestCli::test_cli_invalid_args[invalid_args3]|run
# and this (just plain `coverage`)
#   tests.test_cli.TestCli.test_cli_invalid_args
#   tests.test_cli.TestCli.test_cli_prompts_for_days
# The full pytest name shows us that the first two parametrized tests of
# test_cli_invalid_args do NOT test the line.
addopts = -ra
          --cov bitwarden_to_keepass
          --cov-report html
          --cov-context test

[coverage:run]
branch = True

[coverage:html]
show_contexts = True
